k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: task-management
  namespace: tasks
spec:
  to:
    kind: Service
    name: task-management
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
